new files added

--- a/express/public/main2.html
+++ b/express/public/main2.html
@@ -6,7 +6,7 @@
     <script src="/javascripts/prac4.js"></script>
 </head>
 <body>
-    <h1>Why T&C?</h1>
+    <h1>Why T&amp;C?</h1>
     <script>
         acceptTC();
     </script>
