--- a/express/public/site.html
+++ b/express/public/site.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>My AJAX Site</h1>
-    <button onclick="contact()">Contact</button>
-    <button onclick="search()">Search</button>
-    <button onclick="about()">About</button>
+    <button type="button" onclick="contact()">Contact</button>
+    <button type="button" onclick="search()">Search</button>
+    <button type="button" onclick="about()">About</button>
     <script>
         acceptTC();
     </script>
