--- a/express/public/color2.html
+++ b/express/public/color2.html
@@ -6,8 +6,8 @@
     <script src="/javascripts/prac4.js"></script>
 </head>
 <body>
-    <h1 id="header"></h1>
-    <button onclick="getColors()">Click here to change colors</button>
+    <h1 id="header">Header Text</h1>
+    <button type="button" onclick="getColors()">Click here to change colors</button>
     <script>
         getColors();
     </script>
